# remote-image-worker

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  go.mod  go.sum  main.cpp  main.go  remote-image-worker.sln  remote-image-worker.vcxproj  remote-image-worker.vcxproj.filters
encod/: encod.cpp  encod.h  format_jpg.cpp  format_jpg.h
internal/: pipe.go
internal/encod/: encod.go  jpg.go
internal/pb/: frame_data.pb.go  frame_data.proto
internal/proc/: color.go  edge.go  proc.go
internal/socket/: pull.go  push.go
pb/: frame_data.pb.cc  frame_data.pb.h  frame_data.proto  pb.cpp  pb.h
proc/: Edge.cpp  color.cpp  proc.h
sockets/: PullSocket.cpp  PushSocket.cpp  Sockets.h
src/: encod.rs  error.rs  io.rs  main.rs
src/encod/: mod.rs
src/encod/formats/: jpg.rs  mod.rs  png.rs  webp.rs
src/pb/: frame_data.proto  frame_data.rs  mod.rs  sample.proto  sample.rs
src/proc/: color.rs  edge.rs  mod.rs
src/sockets/: mod.rs  pull.rs  push.rs
src/tests/: base64.rs  formats.rs  io.rs  mat_eq.rs  mod.rs  pb.rs  proc.rs  sockets.rs
test/proc/: color_test.go  edge_test.go  proc_test.go
test/socket/: pull_test.go  push_test.go
tests/: tests.cpp  tests.vcxproj
