[package]
name = "remote-image-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
opencv = "0.74"
zmq = "0.10"
bytes = "1.3"
prost = "0.11"
prost-types = "0.11"
rayon = "1.6.1"

[build-dependencies]
prost-build = "0.11"
